remove z-indexes from layers in scoreboard the z-index settings were no longer needed (layer opacity is now used), and they were causing the "accelerated compositing" bug (not sure why)

--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -16,7 +16,6 @@
 #mainDiv div { position: absolute; }
 #mainDiv>div.View { width: 100%; height: 100%; }
 #mainDiv>div.View:not(.Show) { opacity: 0; }
-#mainDiv>div.View:not(#sbDiv) { z-index: 100; }
 
 div.full { height: 100%; width: 100%; border-radius: inherit; }
 div.RedBox { background: #ff0000; opacity: 0.6; }
@@ -38,7 +37,6 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
 
 /* http://net.tutsplus.com/tutorials/html-css-techniques/quick-tip-understanding-css3-gradients/ */
 #sbDiv {
-  z-index: 500;
   background: #222222;
   background: -moz-linear-gradient(top, #000000, #222222 50%, #777777 100%);
   background: -webkit-gradient(linear, 0 0, 0 100%, from(#000000), color-stop(50%, #222222), color-stop(100%, #777777));
